fix: blog-details form title mb, theme btn align

--- a/css/style.css
+++ b/css/style.css
@@ -8977,7 +8977,10 @@ ul.children {
 }
 
 .comment-form {
-  margin-top: 40px;
+  margin-top: 20px;
+}
+.comment-form .theme-btn {
+  text-transform: uppercase;
 }
 
 .comment-respond {
