--- a/sass/modules/_comment-form.scss
+++ b/sass/modules/_comment-form.scss
@@ -34,7 +34,10 @@
   }
 }
 .comment-form {
-  margin-top: 40px;
+  margin-top: 20px;
+  .theme-btn{
+    text-transform: uppercase;
+  }
 }
 .comment-respond {
   background-color: $white;
